# hub

./: .env.sample  .env.vault  .gitignore  LICENSE  Makefile  README.md  base_config.toml  components.go  config.toml  docker-compose.yml  firewall.go  flow.go  gateway.go  go.mod  go.sum  hub.go  hub.sh  install.sh  mailserver.env  main.go  remote.go  script.sh  scripts.go  session.go  start_test_server.sh  sync.go  test_server.sh  types.go  utils.go
.github/: dependabot.yml
apps/: certbot.sh  gotify.sh  mullvad.sh  rclone.sh  wireguard.sh
backend/: base_config.toml  components.go  config.go  session.go  systemd.go
builds/: script.sh
commands/: certbot.sh  gateway.sh  gotify.sh  mailserver.sh  migrate.sh  mullvad.sh  wireguard.sh
conf/: 50unattended-upgrades  avahi-daemon.conf  avahi_time_machine.service  immich.conf  jupyterhub_config.py  mailserver.conf  prometheus.yml  radicale_config  rtc_config.json  searxng.yml  smb.conf  sysctl.conf  turnserver.conf
cron/: Dockerfile  create_vultr_snapshot.go  download_cleaner.sh  entrypoint.sh  media_cleaner.py  media_cleaner_config.py  media_cleaner_config_sample.py
dev/: ssh  test_server.sh  ubuntu-ssh.dockerfile
docker/: docker-compose-books.yml  docker-compose-calender.yml  docker-compose-chatai.yml  docker-compose-comms.yml  docker-compose-entertainment.yml  docker-compose-ferdium.yml  docker-compose-hoarder.yml  docker-compose-jupyterhub.yml  (+9 more)
migrate/: setup.sh  (+1 more)
modules/media-cleaner/: Cargo.toml  Dockerfile  download-cleaner.sh  entrypoint.sh  media_cleaner.py
modules/media-cleaner/src/: main.rs  types.rs
(+142 files in other folders)
