[package]
name = "media-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Vedhavyas Singareddi<hi@vedhavyas.dev>"]

[dependencies]
chrono = { version= ">=0.4.23", features = ["serde"] }
log = ">=0.4"
reqwest = { version = ">=0.11", features = ["blocking", "json"] }
serde = { version = ">=1.0", features = ["derive"] }
simple_logger = { version = ">=4.0.0" }
